# chiken_ws

./: .gitignore  run_all.sh
docs/: chicken_robot_bom.md  chicken_robot_ros2_architecture.md  chicken_robot_system_plan.md  ros2_pixi_installation.md
ros2_ws/: pixi.toml
ros2_ws/src/animatronic_dynamixel/: README.md  package.xml  setup.cfg  setup.py  test_import.py  test_motor_backend.py  test_motor_read_positions.py  test_motor_scheduler.py
ros2_ws/src/animatronic_dynamixel/animatronic_dynamixel/: motor_node.py
ros2_ws/src/animatronic_dynamixel/config/: motor_node.yaml
ros2_ws/src/animatronic_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/animatronic_interfaces/action/: RunPattern.action
ros2_ws/src/animatronic_interfaces/msg/: DetectedPerson.msg  DetectedPersonArray.msg  EventLog.msg  JointTarget.msg  JointTargets.msg  Mode.msg  MotionStatus.msg  MotorCalibration.msg  MotorDiagnostic.msg  MotorDiagnosticsArray.msg  MotorJointPosition.msg  MotorStatus.msg  SensorStatus.msg
ros2_ws/src/animatronic_interfaces/srv/: GetMotorPositions.srv  MotorCommand.srv  SetMode.srv  SetMotorCalibration.srv  ValidatePattern.srv
ros2_ws/src/animatronic_logger/: README.md  package.xml  setup.cfg  setup.py  test_import.py
ros2_ws/src/animatronic_logger/animatronic_logger/: logger_node.py
ros2_ws/src/animatronic_motion/: package.xml  setup.cfg  setup.py  test_import.py  test_motion_node_state.py  test_web_motion.py
ros2_ws/src/animatronic_motion/animatronic_motion/: motion_node.py  patterns.py  web_motion.py
ros2_ws/src/animatronic_motion/patterns/: look_left_right.yaml
ros2_ws/src/animatronic_web/: README.md  package.xml  setup.cfg  setup.py  test_import.py  test_web_server_node_sync.py
ros2_ws/src/animatronic_web/animatronic_web/: web_server_node.py
ros2_ws/src/animatronic_web/patterns/: idle.yaml
ros2_ws/src/animatronic_web/scripts/: rebuild_run_18080.sh
ros2_ws/src/animatronic_web/static/: app.jsx  console.css  index.html  store.jsx  tab-diagnostics.jsx  tab-library.jsx  tab-manual.jsx  tab-motion.jsx  tab-motor-settings.jsx  tab-operations.jsx  tab-sensor.jsx  tab-settings.jsx  ui.jsx  viewer3d.jsx
ros2_ws/src/chicken_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/chicken_bringup/config/: joints.yaml  motion.yaml  motors.example.yaml  motors.yaml  sensor.yaml  web.yaml
ros2_ws/src/chicken_bringup/launch/: chicken.launch.py  control.launch.py  web.launch.py
ros2_ws/src/chicken_description/: CMakeLists.txt  package.xml
ros2_ws/src/chicken_description/urdf/: chicken_neck.urdf.xacro
ros2_ws/src/people_mmwave_sensor/: package.xml  setup.cfg  setup.py  test_import.py
ros2_ws/src/people_mmwave_sensor/people_mmwave_sensor/: __init__.py  backends.py  detection.py  parsers.py  sensor_node.py
